--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <h3>Desenvolvido por João Vitor Perez</h3>
     </footer>
 
-    <script src="./js/script.js"></script>
+    <script src="./script.js"></script>
 </body>
 
 </html>
